# CMakeList.txt: проект CMake для ALL_TEST_PROJECT; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ALL_TEST_PROJECT "ALL_TEST_PROJECT.cpp" "ALL_TEST_PROJECT.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
